my second commit

--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>my blog post</h1>
-    <p>my name is Yaqoob Ahmed.
-        I am 19 Years old from India.
-        I was born on the 27TH of July 2004, Manama, Bahrain.
+    <p>my name is Yaqoob Ahmed.<br>
+        I am 19 Years old from India.<br>
+        I was born on the 27TH of July 2004, Manama, Bahrain, but I am studying in India.
 
     </p><br>
     <p>I am currently pursuing engineering here in India at Lords Institute of Engineering and Technology, Osmania University, Hyderabad</p>
