--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>my blog post</h1>
+    <h2>I am shiraz Imam</h2>
+    <p>I am testing this</p>
     <p>my name is Yaqoob Ahmed.<br>
         I am 19 Years old from India.<br>
         I was born on the 27TH of July 2004, Manama, Bahrain, but I am studying in India.
