my third commitment

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
         I was born on the 27TH of July 2004, Manama, Bahrain, but I am studying in India.
 
     </p><br>
-    <p>I am currently pursuing engineering here in India at Lords Institute of Engineering and Technology, Osmania University, Hyderabad</p>
+    <p>I am currently pursuing engineering here in India at Lords Institute of Engineering and Technology, Osmania University, Hyderabad. I like to play cricket</p>
     <img src="bahrain.jpg"> 
 </body>
 </html>
